--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,76 +1,73 @@
-
 /* other blue color #060b26*/
 
 .menu-bars {
-    margin-left: 2rem;
-    font-size: 2rem;
-    background: none;
+  margin-left: 2rem;
+  font-size: 2rem;
+  background: none;
 }
 
 .nav-menu {
-    background-color: #1A2B3C;
-    width: 250px;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    transition: 850ms;
-    z-index: 83;
+  background-color: #1a2b3c;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+  z-index: 83;
 }
 
 .nav-menu.active {
-    left: 0;
-    transition: 350ms;
+  left: 0;
+  transition: 350ms;
 }
 
 .nav-text {
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    list-style: none;
-    height: 60px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  list-style: none;
+  height: 60px;
 }
 
 .nav-text a {
-    text-decoration: none;
-    color: #f5f5f5;
-    font-size: 18px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding-left: 38px;
+  text-decoration: none;
+  color: #f5f5f5;
+  font-size: 18px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 38px;
 }
 
 .nav-text a:hover {
-    background-color: #0a3d62;
+  background-color: #0a3d62;
 }
 
 .nav-menu-items {
-    width: 100%;
-
+  width: 100%;
 }
 
 .Menu-span {
-    margin-left: 16px;
-
+  margin-left: 16px;
 }
 
 .navbar-toggle {
-    background-color: #1A2B3C;
-    width: 100%;
-    height: 80px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
+  background-color: #1a2b3c;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
 }
 
 .Link .span {
-    margin-left: 16px;
+  margin-left: 16px;
 }
 
 .overlay {
-    z-index: 100;
+  z-index: 100;
 }
