--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
+  margin-left: 1rem;
+  margin-top: 6px;
+  font-size: 1.8rem;
   background: none;
 }
 
@@ -24,7 +25,7 @@
 
 .nav-text {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   list-style: none;
   height: 60px;
@@ -56,9 +57,9 @@
 .navbar-toggle {
   background-color: #1a2b3c;
   width: 100%;
-  height: 80px;
+  height: 60px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
